[gd_scene load_steps=14 format=3 uid="uid://ip1h5ai4eur0"]

[ext_resource type="Script" path="res://scenes/main/attack/attack_scene.gd" id="1_1imwg"]
[ext_resource type="Texture2D" uid="uid://dxmderd3m2a77" path="res://resources/Sprout Lands - Sprites - Basic pack/Tilesets/Grass.png" id="1_hnlq7"]
[ext_resource type="Texture2D" uid="uid://n3wnp3dlyhn6" path="res://resources/Sprout Lands - Sprites - Basic pack/Objects/Basic_Grass_Biom_things.png" id="2_jbtdj"]
[ext_resource type="Texture2D" uid="uid://woaohcfhc5wt" path="res://resources/Sprout Lands - Sprites - Basic pack/Tilesets/Fences.png" id="3_lka0x"]
[ext_resource type="PackedScene" uid="uid://bardg8x4gxwh8" path="res://scenes/main/Character/character.tscn" id="4_wjpdk"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ybnma"]
resource_name = "GrassFloor"
texture = ExtResource("1_hnlq7")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0

[sub_resource type="TileSet" id="TileSet_nfwwa"]
sources/0 = SubResource("TileSetAtlasSource_ybnma")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_8s6t7"]
resource_name = "Trees"
texture = ExtResource("2_jbtdj")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_u67xg"]
resource_name = "Decorations"
texture = ExtResource("2_jbtdj")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0

[sub_resource type="TileSet" id="TileSet_wmtyq"]
sources/0 = SubResource("TileSetAtlasSource_8s6t7")
sources/1 = SubResource("TileSetAtlasSource_u67xg")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_lw6qw"]
texture = ExtResource("3_lka0x")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0

[sub_resource type="TileSet" id="TileSet_gxia3"]
sources/0 = SubResource("TileSetAtlasSource_lw6qw")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_herit"]
size = Vector2(30, 30)

[node name="AttackScene" type="Node"]
process_mode = 3
script = ExtResource("1_1imwg")

[node name="World" type="Node2D" parent="."]
metadata/_edit_group_ = true

[node name="Floor" type="TileMap" parent="World"]
tile_set = SubResource("TileSet_nfwwa")
format = 2
layer_0/tile_data = PackedInt32Array(0, 65536, 1, 65536, 65536, 1, 65537, 65536, 1, 65538, 65536, 1, 65539, 65536, 1, 131076, 65536, 1, 196612, 65536, 1, 196611, 65536, 1, 196610, 65536, 1, 131074, 65536, 1, 131073, 65536, 1, 1, 65536, 1, 2, 65536, 1, 3, 65536, 1, 131075, 65536, 1, 131072, 65536, 1, 196608, 65536, 1, 196609, 65536, 1, 65540, 65536, 1, 4, 65536, 1, 262144, 65536, 1, 327680, 65536, 1, 393216, 65536, 1, 458752, 65536, 1, 524288, 65536, 1, 589824, 65536, 1, 655360, 65536, 1, 720896, 65536, 1, 786432, 0, 5, 851968, 0, 5, 917504, 65536, 1, 983040, 65536, 1, 1048576, 65536, 1, 1114112, 65536, 1, 1179648, 65536, 1, 1245184, 65536, 1, 1310720, 65536, 1, 1376256, 65536, 1, 1441792, 65536, 1, 1507328, 65536, 1, 1572864, 65536, 1, 1638400, 65536, 1, 1703936, 65536, 1, 1769472, 65536, 1, 1835008, 65536, 1, 1900544, 65536, 1, 1966080, 65536, 1, 2031616, 65536, 1, 2097152, 65536, 1, 2162688, 65536, 1, 2228224, 65536, 1, 2293760, 65536, 1, 2359296, 65536, 1, 2424832, 65536, 1, 2490368, 65536, 1, 2555904, 65536, 1, 262145, 65536, 1, 327681, 65536, 1, 393217, 65536, 1, 458753, 65536, 1, 524289, 65536, 1, 589825, 65536, 1, 655361, 0, 5, 720897, 0, 5, 786433, 0, 5, 851969, 65536, 1, 917505, 65536, 1, 983041, 65536, 1, 1048577, 65536, 1, 1114113, 65536, 1, 1179649, 65536, 1, 1245185, 65536, 1, 1310721, 65536, 1, 1376257, 65536, 1, 1441793, 65536, 1, 1507329, 65536, 1, 1572865, 65536, 1, 1638401, 65536, 1, 1703937, 65536, 1, 1769473, 65536, 1, 1835009, 65536, 1, 1900545, 65536, 1, 1966081, 65536, 1, 2031617, 65536, 1, 2097153, 65536, 1, 2162689, 65536, 1, 2228225, 65536, 1, 2293761, 65536, 1, 2359297, 65536, 1, 2424833, 65536, 1, 2490369, 65536, 1, 2555905, 65536, 1, 262146, 65536, 1, 327682, 65536, 1, 393218, 65536, 1, 458754, 65536, 1, 524290, 65536, 1, 589826, 0, 5, 655362, 65536, 1, 720898, 65536, 1, 786434, 65536, 1, 851970, 65536, 1, 917506, 65536, 1, 983042, 65536, 1, 1048578, 131072, 5, 1114114, 131072, 5, 1179650, 65536, 1, 1245186, 65536, 1, 1310722, 65536, 1, 1376258, 65536, 1, 1441794, 65536, 1, 1507330, 65536, 1, 1572866, 65536, 1, 1638402, 65536, 1, 1703938, 65536, 1, 1769474, 65536, 1, 1835010, 65536, 1, 1900546, 65536, 1, 1966082, 65536, 1, 2031618, 65536, 1, 2097154, 65536, 1, 2162690, 65536, 1, 2228226, 65536, 1, 2293762, 65536, 1, 2359298, 65536, 1, 2424834, 65536, 1, 2490370, 65536, 1, 2555906, 65536, 1, 262147, 65536, 1, 327683, 65536, 1, 393219, 65536, 1, 458755, 0, 5, 524291, 0, 5, 589827, 65536, 1, 655363, 65536, 1, 720899, 65536, 1, 786435, 65536, 1, 851971, 65536, 1, 917507, 65536, 1, 983043, 65536, 1, 1048579, 65536, 1, 1114115, 131072, 5, 1179651, 65536, 1, 1245187, 65536, 1, 1310723, 65536, 1, 1376259, 65536, 1, 1441795, 131072, 5, 1507331, 65536, 1, 1572867, 65536, 1, 1638403, 65536, 1, 1703939, 65536, 1, 1769475, 65536, 1, 1835011, 131072, 5, 1900547, 65536, 1, 1966083, 65536, 1, 2031619, 0, 5, 2097155, 65536, 1, 2162691, 65536, 1, 2228227, 65536, 1, 2293763, 65536, 1, 2359299, 65536, 1, 2424835, 65536, 1, 2490371, 65536, 1, 2555907, 65536, 1, 262148, 65536, 1, 327684, 0, 5, 393220, 0, 5, 458756, 65536, 1, 524292, 0, 5, 589828, 0, 5, 655364, 65536, 1, 720900, 65536, 1, 786436, 65536, 1, 851972, 65536, 1, 917508, 65536, 1, 983044, 65536, 1, 1048580, 65536, 1, 1114116, 65536, 1, 1179652, 65536, 1, 1245188, 65536, 1, 1310724, 65536, 1, 1376260, 65536, 1, 1441796, 131072, 5, 1507332, 65536, 1, 1572868, 65536, 1, 1638404, 196608, 5, 1703940, 65536, 1, 1769476, 65536, 1, 1835012, 65536, 1, 1900548, 65536, 1, 1966084, 65536, 1, 2031620, 65536, 1, 2097156, 0, 5, 2162692, 0, 5, 2228228, 65536, 1, 2293764, 65536, 1, 2359300, 65536, 1, 2424836, 65536, 1, 2490372, 65536, 1, 2555908, 65536, 1, 5, 65536, 1, 65541, 65536, 1, 131077, 65536, 1, 196613, 65536, 1, 262149, 65536, 1, 327685, 0, 5, 393221, 65536, 1, 458757, 65536, 1, 524293, 65536, 1, 589829, 0, 5, 655365, 65536, 1, 720901, 65536, 1, 786437, 65536, 1, 851973, 131072, 5, 917509, 65536, 1, 983045, 65536, 1, 1048581, 65536, 1, 1114117, 196608, 5, 1179653, 65536, 1, 1245189, 65536, 1, 1310725, 65536, 1, 1376261, 131072, 5, 1441797, 131072, 5, 1507333, 65536, 1, 1572869, 65536, 1, 1638405, 65536, 1, 1703941, 65536, 1, 1769477, 65536, 1, 1835013, 65536, 1, 1900549, 65536, 1, 1966085, 65536, 1, 2031621, 65536, 1, 2097157, 196608, 5, 2162693, 65536, 1, 2228229, 0, 5, 2293765, 65536, 1, 2359301, 65536, 1, 2424837, 65536, 1, 2490373, 65536, 1, 2555909, 65536, 1, 6, 65536, 1, 65542, 65536, 1, 131078, 65536, 1, 196614, 65536, 1, 262150, 0, 5, 327686, 65536, 1, 393222, 65536, 1, 458758, 65536, 1, 524294, 65536, 1, 589830, 196608, 5, 655366, 196608, 5, 720902, 65536, 1, 786438, 65536, 1, 851974, 131072, 5, 917510, 65536, 1, 983046, 65536, 1, 1048582, 65536, 1, 1114118, 65536, 1, 1179654, 65536, 1, 1245190, 65536, 1, 1310726, 131072, 5, 1376262, 131072, 5, 1441798, 65536, 1, 1507334, 65536, 1, 1572870, 65536, 1, 1638406, 65536, 1, 1703942, 0, 5, 1769478, 65536, 1, 1835014, 65536, 1, 1900550, 65536, 1, 1966086, 196608, 5, 2031622, 65536, 1, 2097158, 196608, 5, 2162694, 196608, 5, 2228230, 0, 5, 2293766, 65536, 1, 2359302, 65536, 1, 2424838, 65536, 1, 2490374, 65536, 1, 2555910, 65536, 1, 7, 65536, 1, 65543, 65536, 1, 131079, 65536, 1, 196615, 65536, 1, 262151, 0, 5, 327687, 65536, 1, 393223, 65536, 1, 458759, 65536, 1, 524295, 65536, 1, 589831, 65536, 1, 655367, 65536, 1, 720903, 0, 5, 786439, 65536, 1, 851975, 196608, 5, 917511, 131072, 5, 983047, 131072, 5, 1048583, 0, 5, 1114119, 0, 5, 1179655, 0, 5, 1245191, 65536, 1, 1310727, 65536, 1, 1376263, 65536, 1, 1441799, 65536, 1, 1507335, 65536, 1, 1572871, 65536, 1, 1638407, 65536, 1, 1703943, 0, 5, 1769479, 65536, 1, 1835015, 65536, 1, 1900551, 65536, 1, 1966087, 65536, 1, 2031623, 65536, 1, 2097159, 65536, 1, 2162695, 65536, 1, 2228231, 0, 5, 2293767, 65536, 1, 2359303, 65536, 1, 2424839, 65536, 1, 2490375, 65536, 1, 2555911, 65536, 1, 8, 65536, 1, 65544, 65536, 1, 131080, 65536, 1, 196616, 65536, 1, 262152, 0, 5, 327688, 65536, 1, 393224, 65536, 1, 458760, 65536, 1, 524296, 65536, 1, 589832, 65536, 1, 655368, 65536, 1, 720904, 0, 5, 786440, 0, 5, 851976, 0, 5, 917512, 65536, 1, 983048, 131072, 5, 1048584, 65536, 1, 1114120, 65536, 1, 1179656, 0, 5, 1245192, 65536, 1, 1310728, 65536, 1, 1376264, 65536, 1, 1441800, 65536, 1, 1507336, 65536, 1, 1572872, 196608, 5, 1638408, 0, 5, 1703944, 0, 5, 1769480, 65536, 1, 1835016, 65536, 1, 1900552, 65536, 1, 1966088, 65536, 1, 2031624, 65536, 1, 2097160, 65536, 1, 2162696, 65536, 1, 2228232, 0, 5, 2293768, 65536, 1, 2359304, 65536, 1, 2424840, 65536, 1, 2490376, 65536, 1, 2555912, 65536, 1, 9, 65536, 1, 65545, 65536, 1, 131081, 65536, 1, 196617, 65536, 1, 262153, 65536, 1, 327689, 65536, 1, 393225, 65536, 1, 458761, 65536, 1, 524297, 65536, 1, 589833, 65536, 1, 655369, 0, 5, 720905, 65536, 1, 786441, 65536, 1, 851977, 65536, 1, 917513, 0, 5, 983049, 65536, 1, 1048585, 65536, 1, 1114121, 65536, 1, 1179657, 0, 5, 1245193, 65536, 1, 1310729, 65536, 1, 1376265, 65536, 1, 1441801, 65536, 1, 1507337, 0, 5, 1572873, 65536, 1, 1638409, 65536, 1, 1703945, 0, 5, 1769481, 65536, 1, 1835017, 65536, 1, 1900553, 65536, 1, 1966089, 65536, 1, 2031625, 65536, 1, 2097161, 65536, 1, 2162697, 65536, 1, 2228233, 0, 5, 2293769, 65536, 1, 2359305, 65536, 1, 2424841, 65536, 1, 2490377, 65536, 1, 2555913, 65536, 1, 10, 65536, 1, 65546, 65536, 1, 131082, 65536, 1, 196618, 65536, 1, 262154, 65536, 1, 327690, 65536, 1, 393226, 65536, 1, 458762, 65536, 1, 524298, 65536, 1, 589834, 0, 5, 655370, 131072, 5, 720906, 131072, 5, 786442, 65536, 1, 851978, 65536, 1, 917514, 65536, 1, 983050, 0, 5, 1048586, 0, 5, 1114122, 65536, 1, 1179658, 0, 5, 1245194, 65536, 1, 1310730, 65536, 1, 1376266, 65536, 1, 1441802, 0, 5, 1507338, 0, 5, 1572874, 65536, 1, 1638410, 65536, 1, 1703946, 0, 5, 1769482, 65536, 1, 1835018, 65536, 1, 1900554, 65536, 1, 1966090, 65536, 1, 2031626, 65536, 1, 2097162, 65536, 1, 2162698, 65536, 1, 2228234, 0, 5, 2293770, 65536, 1, 2359306, 65536, 1, 2424842, 65536, 1, 2490378, 65536, 1, 2555914, 65536, 1, 11, 65536, 1, 65547, 65536, 1, 131083, 65536, 1, 196619, 65536, 1, 262155, 65536, 1, 327691, 65536, 1, 393227, 65536, 1, 458763, 65536, 1, 524299, 65536, 1, 589835, 0, 5, 655371, 65536, 1, 720907, 131072, 5, 786443, 131072, 5, 851979, 65536, 1, 917515, 65536, 1, 983051, 65536, 1, 1048587, 0, 5, 1114123, 0, 5, 1179659, 0, 5, 1245195, 65536, 1, 1310731, 65536, 1, 1376267, 0, 5, 1441803, 0, 5, 1507339, 65536, 1, 1572875, 65536, 1, 1638411, 65536, 1, 1703947, 196608, 5, 1769483, 196608, 5, 1835019, 65536, 1, 1900555, 65536, 1, 1966091, 196608, 5, 2031627, 65536, 1, 2097163, 65536, 1, 2162699, 65536, 1, 2228235, 0, 5, 2293771, 65536, 1, 2359307, 65536, 1, 2424843, 65536, 1, 2490379, 65536, 1, 2555915, 65536, 1, 12, 65536, 1, 65548, 65536, 1, 131084, 65536, 1, 196620, 65536, 1, 262156, 65536, 1, 327692, 65536, 1, 393228, 65536, 1, 458764, 65536, 1, 524300, 0, 5, 589836, 65536, 1, 655372, 65536, 1, 720908, 65536, 1, 786444, 131072, 5, 851980, 65536, 1, 917516, 65536, 1, 983052, 65536, 1, 1048588, 65536, 1, 1114124, 0, 5, 1179660, 0, 5, 1245196, 65536, 1, 1310732, 0, 5, 1376268, 65536, 1, 1441804, 196608, 5, 1507340, 65536, 1, 1572876, 65536, 1, 1638412, 0, 5, 1703948, 196608, 5, 1769484, 65536, 1, 1835020, 65536, 1, 1900556, 65536, 1, 1966092, 65536, 1, 2031628, 65536, 1, 2097164, 65536, 1, 2162700, 65536, 1, 2228236, 0, 5, 2293772, 65536, 1, 2359308, 65536, 1, 2424844, 65536, 1, 2490380, 65536, 1, 2555916, 65536, 1, 13, 65536, 1, 65549, 65536, 1, 131085, 65536, 1, 196621, 65536, 1, 262157, 65536, 1, 327693, 65536, 1, 393229, 65536, 1, 458765, 65536, 1, 524301, 0, 5, 589837, 65536, 1, 655373, 65536, 1, 720909, 65536, 1, 786445, 65536, 1, 851981, 65536, 1, 917517, 65536, 1, 983053, 65536, 1, 1048589, 65536, 1, 1114125, 65536, 1, 1179661, 65536, 1, 1245197, 65536, 1, 1310733, 65536, 1, 1376269, 65536, 1, 1441805, 65536, 1, 1507341, 65536, 1, 1572877, 65536, 1, 1638413, 0, 5, 1703949, 65536, 1, 1769485, 65536, 1, 1835021, 65536, 1, 1900557, 65536, 1, 1966093, 65536, 1, 2031629, 65536, 1, 2097165, 65536, 1, 2162701, 65536, 1, 2228237, 0, 5, 2293773, 65536, 1, 2359309, 65536, 1, 2424845, 65536, 1, 2490381, 65536, 1, 2555917, 65536, 1, 14, 65536, 1, 65550, 65536, 1, 131086, 65536, 1, 196622, 65536, 1, 262158, 65536, 1, 327694, 65536, 1, 393230, 65536, 1, 458766, 65536, 1, 524302, 0, 5, 589838, 65536, 1, 655374, 65536, 1, 720910, 65536, 1, 786446, 65536, 1, 851982, 65536, 1, 917518, 65536, 1, 983054, 65536, 1, 1048590, 65536, 1, 1114126, 65536, 1, 1179662, 65536, 1, 1245198, 65536, 1, 1310734, 65536, 1, 1376270, 65536, 1, 1441806, 65536, 1, 1507342, 65536, 1, 1572878, 0, 5, 1638414, 65536, 1, 1703950, 65536, 1, 1769486, 65536, 1, 1835022, 65536, 1, 1900558, 65536, 1, 1966094, 65536, 1, 2031630, 65536, 1, 2097166, 65536, 1, 2162702, 65536, 1, 2228238, 196608, 5, 2293774, 65536, 1, 2359310, 65536, 1, 2424846, 65536, 1, 2490382, 65536, 1, 2555918, 65536, 1, 15, 65536, 1, 65551, 65536, 1, 131087, 65536, 1, 196623, 65536, 1, 262159, 65536, 1, 327695, 196608, 5, 393231, 196608, 5, 458767, 65536, 1, 524303, 0, 5, 589839, 0, 5, 655375, 65536, 1, 720911, 196608, 5, 786447, 65536, 1, 851983, 65536, 1, 917519, 0, 5, 983055, 131072, 5, 1048591, 65536, 1, 1114127, 65536, 1, 1179663, 196608, 5, 1245199, 65536, 1, 1310735, 65536, 1, 1376271, 65536, 1, 1441807, 65536, 1, 1507343, 0, 5, 1572879, 0, 5, 1638415, 65536, 1, 1703951, 65536, 1, 1769487, 65536, 1, 1835023, 65536, 1, 1900559, 65536, 1, 1966095, 65536, 1, 2031631, 65536, 1, 2097167, 65536, 1, 2162703, 0, 5, 2228239, 196608, 5, 2293775, 196608, 5, 2359311, 65536, 1, 2424847, 65536, 1, 2490383, 65536, 1, 2555919, 65536, 1, 16, 65536, 1, 65552, 65536, 1, 131088, 65536, 1, 196624, 65536, 1, 262160, 65536, 1, 327696, 65536, 1, 393232, 65536, 1, 458768, 65536, 1, 524304, 65536, 1, 589840, 0, 5, 655376, 0, 5, 720912, 0, 5, 786448, 0, 5, 851984, 0, 5, 917520, 65536, 1, 983056, 131072, 5, 1048592, 65536, 1, 1114128, 65536, 1, 1179664, 0, 5, 1245200, 0, 5, 1310736, 0, 5, 1376272, 0, 5, 1441808, 0, 5, 1507344, 0, 5, 1572880, 0, 5, 1638416, 0, 5, 1703952, 65536, 1, 1769488, 65536, 1, 1835024, 65536, 1, 1900560, 196608, 5, 1966096, 65536, 1, 2031632, 65536, 1, 2097168, 65536, 1, 2162704, 0, 5, 2228240, 196608, 5, 2293776, 196608, 5, 2359312, 65536, 1, 2424848, 65536, 1, 2490384, 65536, 1, 2555920, 65536, 1, 17, 65536, 1, 65553, 65536, 1, 131089, 65536, 1, 196625, 65536, 1, 262161, 65536, 1, 327697, 65536, 1, 393233, 65536, 1, 458769, 65536, 1, 524305, 65536, 1, 589841, 65536, 1, 655377, 65536, 1, 720913, 65536, 1, 786449, 65536, 1, 851985, 131072, 5, 917521, 131072, 5, 983057, 131072, 5, 1048593, 0, 5, 1114129, 0, 5, 1179665, 65536, 1, 1245201, 65536, 1, 1310737, 65536, 1, 1376273, 65536, 1, 1441809, 65536, 1, 1507345, 65536, 1, 1572881, 65536, 1, 1638417, 65536, 1, 1703953, 65536, 1, 1769489, 65536, 1, 1835025, 65536, 1, 1900561, 65536, 1, 1966097, 65536, 1, 2031633, 65536, 1, 2097169, 65536, 1, 2162705, 65536, 1, 2228241, 65536, 1, 2293777, 65536, 1, 2359313, 65536, 1, 2424849, 65536, 1, 2490385, 65536, 1, 2555921, 65536, 1, 18, 65536, 1, 65554, 65536, 1, 131090, 65536, 1, 196626, 65536, 1, 262162, 65536, 1, 327698, 65536, 1, 393234, 65536, 1, 458770, 65536, 1, 524306, 131072, 5, 589842, 131072, 5, 655378, 65536, 1, 720914, 65536, 1, 786450, 65536, 1, 851986, 65536, 1, 917522, 65536, 1, 983058, 65536, 1, 1048594, 65536, 1, 1114130, 0, 5, 1179666, 65536, 1, 1245202, 65536, 1, 1310738, 65536, 1, 1376274, 65536, 1, 1441810, 65536, 1, 1507346, 65536, 1, 1572882, 65536, 1, 1638418, 65536, 1, 1703954, 65536, 1, 1769490, 65536, 1, 1835026, 65536, 1, 1900562, 65536, 1, 1966098, 65536, 1, 2031634, 65536, 1, 2097170, 65536, 1, 2162706, 65536, 1, 2228242, 65536, 1, 2293778, 65536, 1, 2359314, 65536, 1, 2424850, 65536, 1, 2490386, 65536, 1, 2555922, 65536, 1, 19, 65536, 1, 65555, 65536, 1, 131091, 65536, 1, 196627, 65536, 1, 262163, 65536, 1, 327699, 65536, 1, 393235, 65536, 1, 458771, 65536, 1, 524307, 65536, 1, 589843, 131072, 5, 655379, 131072, 5, 720915, 131072, 5, 786451, 131072, 5, 851987, 131072, 5, 917523, 65536, 1, 983059, 65536, 1, 1048595, 65536, 1, 1114131, 0, 5, 1179667, 0, 5, 1245203, 65536, 1, 1310739, 65536, 1, 1376275, 65536, 1, 1441811, 65536, 1, 1507347, 65536, 1, 1572883, 65536, 1, 1638419, 65536, 1, 1703955, 65536, 1, 1769491, 65536, 1, 1835027, 65536, 1, 1900563, 65536, 1, 1966099, 65536, 1, 2031635, 65536, 1, 2097171, 65536, 1, 2162707, 65536, 1, 2228243, 65536, 1, 2293779, 65536, 1, 2359315, 65536, 1, 2424851, 65536, 1, 2490387, 65536, 1, 2555923, 65536, 1, 20, 65536, 1, 65556, 65536, 1, 131092, 65536, 1, 196628, 65536, 1, 262164, 65536, 1, 327700, 65536, 1, 393236, 65536, 1, 458772, 65536, 1, 524308, 65536, 1, 589844, 65536, 1, 655380, 65536, 1, 720916, 65536, 1, 786452, 65536, 1, 851988, 65536, 1, 917524, 65536, 1, 983060, 65536, 1, 1048596, 65536, 1, 1114132, 65536, 1, 1179668, 0, 5, 1245204, 65536, 1, 1310740, 65536, 1, 1376276, 65536, 1, 1441812, 65536, 1, 1507348, 65536, 1, 1572884, 65536, 1, 1638420, 65536, 1, 1703956, 65536, 1, 1769492, 65536, 1, 1835028, 65536, 1, 1900564, 65536, 1, 1966100, 65536, 1, 2031636, 65536, 1, 2097172, 65536, 1, 2162708, 65536, 1, 2228244, 65536, 1, 2293780, 65536, 1, 2359316, 65536, 1, 2424852, 65536, 1, 2490388, 65536, 1, 2555924, 65536, 1, 21, 65536, 1, 65557, 65536, 1, 131093, 65536, 1, 196629, 65536, 1, 262165, 65536, 1, 327701, 65536, 1, 393237, 65536, 1, 458773, 65536, 1, 524309, 65536, 1, 589845, 65536, 1, 655381, 65536, 1, 720917, 65536, 1, 786453, 65536, 1, 851989, 65536, 1, 917525, 65536, 1, 983061, 65536, 1, 1048597, 65536, 1, 1114133, 65536, 1, 1179669, 65536, 1, 1245205, 65536, 1, 1310741, 65536, 1, 1376277, 65536, 1, 1441813, 65536, 1, 1507349, 65536, 1, 1572885, 65536, 1, 1638421, 65536, 1, 1703957, 65536, 1, 1769493, 65536, 1, 1835029, 65536, 1, 1900565, 65536, 1, 1966101, 65536, 1, 2031637, 65536, 1, 2097173, 65536, 1, 2162709, 65536, 1, 2228245, 65536, 1, 2293781, 65536, 1, 2359317, 65536, 1, 2424853, 65536, 1, 2490389, 65536, 1, 2555925, 65536, 1)
metadata/_edit_lock_ = true

[node name="Biome" type="TileMap" parent="World"]
tile_set = SubResource("TileSet_wmtyq")
format = 2
layer_0/tile_data = PackedInt32Array(131074, 0, 1, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 131075, 0, 1, 131076, 0, 1, 131077, 0, 1, 131078, 0, 1, 131079, 0, 1, 131080, 0, 1, 131081, 0, 1, 131082, 0, 1, 131083, 0, 1, 131084, 0, 1, 131085, 0, 1, 131086, 0, 1, 131087, 0, 1, 131088, 0, 1, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 65553, 65536, 0, 65554, 131072, 0, 131090, 131072, 1, 131089, 65536, 1, 65536, 65536, 0, 131072, 65536, 1, 65537, 131072, 0, 131073, 131072, 1, 589830, 196608, 0, 655366, 196608, 1, 589831, 262144, 0, 655367, 262144, 1, 589835, 196608, 0, 655371, 196608, 1, 589836, 262144, 0, 655372, 262144, 1, 917510, 196608, 0, 983046, 196608, 1, 917511, 262144, 0, 983047, 262144, 1, 917515, 196608, 0, 983051, 196608, 1, 917516, 262144, 0, 983052, 262144, 1, 196609, 65536, 3, 262145, 65536, 3, 327681, 65536, 3, 393217, 65536, 3, 458753, 65536, 3, 524289, 65536, 3, 589825, 65536, 3, 655361, 65536, 3, 720897, 65536, 3, 786433, 65536, 3, 851969, 65536, 3, 917505, 65536, 3, 983041, 65536, 3, 1048577, 65536, 3, 1114113, 65536, 3, 1179649, 65536, 3, 1245185, 65536, 3, 196625, 65536, 3, 262161, 65536, 3, 327697, 65536, 3, 393233, 65536, 3, 458769, 65536, 3, 524305, 65536, 3, 589841, 65536, 3, 655377, 65536, 3, 720913, 65536, 3, 786449, 65536, 3, 851985, 65536, 3, 917521, 65536, 3, 983057, 65536, 3, 1048593, 65536, 3, 1114129, 65536, 3, 1179665, 65536, 3, 1245201, 65536, 3, 1835025, 65536, 0, 1900561, 65536, 1, 1835026, 131072, 0, 1900562, 131072, 1, 1835008, 65536, 0, 1900544, 65536, 1, 1835009, 131072, 0, 1900545, 131072, 1, 1310737, 65536, 3, 1376273, 65536, 3, 1441809, 65536, 3, 1507345, 65536, 3, 1572881, 65536, 3, 1638417, 65536, 3, 1703953, 65536, 3, 1769489, 65536, 3, 1900560, 65536, 3, 1900559, 65536, 3, 1900558, 65536, 3, 1900557, 65536, 3, 1900556, 65536, 3, 1900555, 65536, 3, 1900554, 65536, 3, 1900553, 65536, 3, 1900552, 65536, 3, 1900551, 65536, 3, 1900550, 65536, 3, 1900549, 65536, 3, 1900548, 65536, 3, 1900547, 65536, 3, 1900546, 65536, 3, 1310721, 65536, 3, 1376257, 65536, 3, 1441793, 65536, 3, 1507329, 65536, 3, 1572865, 65536, 3, 1638401, 65536, 3, 1703937, 65536, 3, 1769473, 65536, 3, 655363, 327680, 4, 917508, 327680, 4, 458760, 327680, 4, 786442, 327680, 4, 524302, 327680, 4, 983055, 327680, 4, 1114121, 327680, 4, 1114122, 393216, 4, 524292, 393216, 4, 1048579, 393216, 4, 786438, 393216, 4, 786446, 393216, 4, 327684, 327680, 2, 393222, 327680, 2, 327691, 262144, 2, 393229, 262144, 2, 262157, 262144, 2, 262147, 393216, 0, 327688, 327680, 0, 196624, 327680, 0)

[node name="Fences" type="TileMap" parent="World"]
tile_set = SubResource("TileSet_gxia3")
format = 2
layer_0/tile_data = PackedInt32Array(1310723, 131072, 3, 1310724, 131072, 3, 1310725, 131072, 3, 1310726, 131072, 3, 1310727, 131072, 3, 1310728, 131072, 3, 1310729, 131072, 3, 1310730, 131072, 3, 1310731, 131072, 3, 1310732, 131072, 3, 1310733, 131072, 3, 1310734, 131072, 3, 1310735, 131072, 3, 1310736, 196608, 3, 1310722, 65536, 3)

[node name="Character" parent="." instance=ExtResource("4_wjpdk")]
visible = false

[node name="TreeMarker1" type="Marker2D" parent="."]
position = Vector2(96, 168)

[node name="TreeMarker2" type="Marker2D" parent="."]
position = Vector2(176, 168)

[node name="TreeMarker3" type="Marker2D" parent="."]
position = Vector2(96, 248)

[node name="TreeMarker4" type="Marker2D" parent="."]
position = Vector2(176, 248)

[node name="TreeArea1" type="Area2D" parent="."]
position = Vector2(112, 160)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="TreeArea1"]
shape = SubResource("RectangleShape2D_herit")

[node name="TreeArea2" type="Area2D" parent="."]
position = Vector2(192, 160)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="TreeArea2"]
shape = SubResource("RectangleShape2D_herit")

[node name="TreeArea3" type="Area2D" parent="."]
position = Vector2(112, 240)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="TreeArea3"]
shape = SubResource("RectangleShape2D_herit")

[node name="TreeArea4" type="Area2D" parent="."]
position = Vector2(192, 240)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="TreeArea4"]
shape = SubResource("RectangleShape2D_herit")

[connection signal="input_event" from="TreeArea1" to="." method="_on_tree_area_1_input_event"]
[connection signal="input_event" from="TreeArea2" to="." method="_on_tree_area_2_input_event"]
[connection signal="input_event" from="TreeArea3" to="." method="_on_tree_area_3_input_event"]
[connection signal="input_event" from="TreeArea4" to="." method="_on_tree_area_4_input_event"]
